# varek

./: .gitignore  02-deepmind-ai-scientist-intercept.py  04-huggingface-smolagents-sandbox.ipynb  05-openai-gpt4o-varek-hardened.ipynb  06-crewai-gemini-ast-intercept.ipynb  07-bare-metal-mobile-intercept.py  08-autogen-local-executor-intercept.py  09-prefect-task-intercept.py  10-jpmorgan-intercept.py  11-lmco-edge-ai-varek-intercept.py  12-expel-soc-triage-intercept.py  13-guidepoint-federal-edge-intercept.py  15-xai-grok-firehose-intercept.py  16-deepmind-ai-scientist-intercept.py  16-wandb-pipeline-verification-intercept.py  17-meta-llama-agent-intercept.py  18-palo-alto-xsoar-intercept.py  19-zscaler-ai-data-intercept.py  20-goldman-sachs-intercept.py  21-morgan-stanley-intercept.py  22-citigroup-intercept.py  23-wells-fargo-intercept.py  24-nvidia-intercept.py  CHANGELOG.md  CONTRIBUTING.md  DATA_ROOM.md  LICENSE  LMCO-Sovereign-AI-README.md  NOTICE  README.md  README2.md  README3.md  RELEASE-v1.9.0.md  RELEASE-v1.9.1.md  RELEASE-v1.9.2.md  SECURITY.md  Test issue 223 regression  VAREK-SPEC.md  VAREK_v1.1_SECURITY_UPDATE.md  VAREK_v1.2_RFC.md  (+17 more)
darpa-i2o/: 14-darpa-i2o-demo.py  DARPA_I2O_Whitepaper.md
docs/: RFC_TEMPLATE.md  RFC_seccomp_unotify_design.md  VAREK_v1.2_RFC.md  development.md
examples/: README.md
tests/: Makefile  README.md  seccomp_toctou_harness.c  test_platform_gating.py
v1_5/: Makefile  NOTES.md  bench_results_v1_5.txt  bench_summarize.py  fast_match.c  smt_probe.c  smt_probe2.c
v1_6/: .gitignore  Makefile  NOTES.md  README.md  adapter_demo.c  execution_plan.c  execution_plan.h  execution_plan_internal.h  integration_test.sh  pathology.c  pathology.h  plan_demo.c  plan_evaluator.c  plan_parser.c  plan_parser.h  plan_spec.h  sample_plan.txt  warden_adapter.c  (+2 more)
(+214 files in other folders)
